# StitchROS

src/: CMakeCache.txt  Cloud-0.pcd  (+5 more)
src/project_stitch/: CMakeCache.txt  CMakeLists.txt  CTestConfiguration.ini  CTestTestfile.cmake  Cloud-0 copy.pcd  Cloud-0.pcd  Image Log.txt  Makefile  Point Cloud Log.txt  PubKill  RulesEngine.py  RunRecorder  Subscriber  cloudMessage.pcd  cloud_0.csv  cmake_install.cmake  package.xml
src/project_stitch/atomic_configure/: _setup_util.py  setup.sh
src/project_stitch/catkin_generated/: generate_cached_setup.py  package.cmake  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py  setup_cached.sh
src/project_stitch/catkin_generated/installspace/: project_stitch.pc  project_stitchConfig.cmake
src/project_stitch/cmake/: SpinnakerConfig.cmake  realsense2Config.cmake
src/project_stitch/devel/: .catkin  .rosinstall  local_setup.sh
src/project_stitch/gtest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
src/project_stitch/gtest/googlemock/: CTestTestfile.cmake  Makefile  cmake_install.cmake
src/project_stitch/src/: 9173cca5aadbf7f461f09e8794add769a67d96c37df65da280ebf6ae30a4b9d4-certificate.pem.crt  9173cca5aadbf7f461f09e8794add769a67d96c37df65da280ebf6ae30a4b9d4-private.pem.key  9173cca5aadbf7f461f09e8794add769a67d96c37df65da280ebf6ae30a4b9d4-public.pem.key  FilterSubscriber.cpp  MQTTMessenger.py
src/project_stitch/src/PubKill/: CMakeCache.txt  CMakeLists.txt  Makefile  PubKill.cpp  cmake_install.cmake
src/project_stitch/src/RunRecorder/: RunRecorder.cpp
src/project_stitch/src/imgpublisher/: ImgPublisher.cpp
(+140 files in other folders)
